Fix long text overflowing record selector

--- a/client/web/compose/src/themes/corteza-base/custom.scss
+++ b/client/web/compose/src/themes/corteza-base/custom.scss
@@ -62,10 +62,39 @@ th {
 }
 
 .v-select {
-  min-width: min(100%, 15vw);
+  min-width: auto;
+  position: relative;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin-bottom: 0;
+  font-size: .9rem;
+  border-radius: 0.25rem;
+
+  .vs__selected-options {
+    // do not allow growing
+    width: 0;
+  }
+
+  .vs__selected {
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    overflow: hidden;
+  }
 
   .vs__search {
     margin-top: 0.375rem;
+  }
+
+  &:not(.vs--open) .vs__selected + .vs__search {
+    // force this to not use any space
+    // we still need it to be rendered for the focus
+    width: 0;
+    padding: 0;
+    margin: 0;
+    border: none;
+    height: 0;
   }
 
   .vs__dropdown-toggle {
@@ -91,7 +120,6 @@ th {
 }
 
 .vs__dropdown-menu {
-  min-width: min(100%, 15vw);
   z-index: 1090;
 }
 
